// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlobalAlert renders correctly with all variants renders correctly variant danger 1`] = `
<DocumentFragment>
  .cache-kjn9ce-Stack-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
  height: 56px;
  padding: 0 16px;
}

.cache-kjn9ce-Stack-Container[data-variant='info'] {
  background-color: #0078d2;
}

.cache-kjn9ce-Stack-Container[data-variant='danger'] {
  background-color: #e51963;
}

.cache-kjn9ce-Stack-Container[data-variant='promotional'] {
  background: linear-gradient(151deg, #03cfda 0%, #3d1862 28.91%, #151a2d 75.01%);
}

.cache-1osn1u7-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-fzpogg-StyledText {
  color: #ffffff;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-yx7dgl-StyledFilledButton-CloseButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 24px;
  padding: 0 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 4px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: #8c40ef;
  border: none;
  color: #ffffff;
  background: none;
  position: absolute;
  right: 24px;
}

.cache-yx7dgl-StyledFilledButton-CloseButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-yx7dgl-StyledFilledButton-CloseButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-yx7dgl-StyledFilledButton-CloseButton:hover,
.cache-yx7dgl-StyledFilledButton-CloseButton:active {
  background: #792dd4;
  color: #f9f9fa;
}

.cache-yx7dgl-StyledFilledButton-CloseButton:hover,
.cache-yx7dgl-StyledFilledButton-CloseButton:focus,
.cache-yx7dgl-StyledFilledButton-CloseButton:active {
  background: none;
}

.cache-1dnbbhk-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1dnbbhk-StyledIcon-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    class="cache-kjn9ce-Stack-Container ewvyccp0"
    data-variant="danger"
  >
    <div
      class="cache-1osn1u7-Stack ehpbis70"
    >
      <p
        class="cache-fzpogg-StyledText e13y3mga0"
      >
        Sample GlobalAlert
      </p>
    </div>
    <button
      class="ewvyccp1 cache-yx7dgl-StyledFilledButton-CloseButton e112qvla2"
      type="button"
    >
      <svg
        class="cache-1dnbbhk-StyledIcon-sizeStyles e17h3kg70"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`GlobalAlert renders correctly with all variants renders correctly variant info 1`] = `
<DocumentFragment>
  .cache-kjn9ce-Stack-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
  height: 56px;
  padding: 0 16px;
}

.cache-kjn9ce-Stack-Container[data-variant='info'] {
  background-color: #0078d2;
}

.cache-kjn9ce-Stack-Container[data-variant='danger'] {
  background-color: #e51963;
}

.cache-kjn9ce-Stack-Container[data-variant='promotional'] {
  background: linear-gradient(151deg, #03cfda 0%, #3d1862 28.91%, #151a2d 75.01%);
}

.cache-1osn1u7-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-fzpogg-StyledText {
  color: #ffffff;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-yx7dgl-StyledFilledButton-CloseButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 24px;
  padding: 0 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 4px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: #8c40ef;
  border: none;
  color: #ffffff;
  background: none;
  position: absolute;
  right: 24px;
}

.cache-yx7dgl-StyledFilledButton-CloseButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-yx7dgl-StyledFilledButton-CloseButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-yx7dgl-StyledFilledButton-CloseButton:hover,
.cache-yx7dgl-StyledFilledButton-CloseButton:active {
  background: #792dd4;
  color: #f9f9fa;
}

.cache-yx7dgl-StyledFilledButton-CloseButton:hover,
.cache-yx7dgl-StyledFilledButton-CloseButton:focus,
.cache-yx7dgl-StyledFilledButton-CloseButton:active {
  background: none;
}

.cache-1dnbbhk-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1dnbbhk-StyledIcon-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    class="cache-kjn9ce-Stack-Container ewvyccp0"
    data-variant="info"
  >
    <div
      class="cache-1osn1u7-Stack ehpbis70"
    >
      <p
        class="cache-fzpogg-StyledText e13y3mga0"
      >
        Sample GlobalAlert
      </p>
    </div>
    <button
      class="ewvyccp1 cache-yx7dgl-StyledFilledButton-CloseButton e112qvla2"
      type="button"
    >
      <svg
        class="cache-1dnbbhk-StyledIcon-sizeStyles e17h3kg70"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`GlobalAlert renders correctly with all variants renders correctly variant promotional 1`] = `
<DocumentFragment>
  .cache-kjn9ce-Stack-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
  height: 56px;
  padding: 0 16px;
}

.cache-kjn9ce-Stack-Container[data-variant='info'] {
  background-color: #0078d2;
}

.cache-kjn9ce-Stack-Container[data-variant='danger'] {
  background-color: #e51963;
}

.cache-kjn9ce-Stack-Container[data-variant='promotional'] {
  background: linear-gradient(151deg, #03cfda 0%, #3d1862 28.91%, #151a2d 75.01%);
}

.cache-1osn1u7-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-fzpogg-StyledText {
  color: #ffffff;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-yx7dgl-StyledFilledButton-CloseButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 24px;
  padding: 0 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 4px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: #8c40ef;
  border: none;
  color: #ffffff;
  background: none;
  position: absolute;
  right: 24px;
}

.cache-yx7dgl-StyledFilledButton-CloseButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-yx7dgl-StyledFilledButton-CloseButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-yx7dgl-StyledFilledButton-CloseButton:hover,
.cache-yx7dgl-StyledFilledButton-CloseButton:active {
  background: #792dd4;
  color: #f9f9fa;
}

.cache-yx7dgl-StyledFilledButton-CloseButton:hover,
.cache-yx7dgl-StyledFilledButton-CloseButton:focus,
.cache-yx7dgl-StyledFilledButton-CloseButton:active {
  background: none;
}

.cache-1dnbbhk-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1dnbbhk-StyledIcon-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    class="cache-kjn9ce-Stack-Container ewvyccp0"
    data-variant="promotional"
  >
    <div
      class="cache-1osn1u7-Stack ehpbis70"
    >
      <p
        class="cache-fzpogg-StyledText e13y3mga0"
      >
        Sample GlobalAlert
      </p>
    </div>
    <button
      class="ewvyccp1 cache-yx7dgl-StyledFilledButton-CloseButton e112qvla2"
      type="button"
    >
      <svg
        class="cache-1dnbbhk-StyledIcon-sizeStyles e17h3kg70"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`GlobalAlert renders correctly with buttonText and onClickButton 1`] = `
<DocumentFragment>
  .cache-kjn9ce-Stack-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
  height: 56px;
  padding: 0 16px;
}

.cache-kjn9ce-Stack-Container[data-variant='info'] {
  background-color: #0078d2;
}

.cache-kjn9ce-Stack-Container[data-variant='danger'] {
  background-color: #e51963;
}

.cache-kjn9ce-Stack-Container[data-variant='promotional'] {
  background: linear-gradient(151deg, #03cfda 0%, #3d1862 28.91%, #151a2d 75.01%);
}

.cache-1osn1u7-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-fzpogg-StyledText {
  color: #ffffff;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-ulqn51-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: #e9eaeb;
  border: none;
  color: #222638;
}

.cache-ulqn51-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-ulqn51-StyledFilledButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.cache-ulqn51-StyledFilledButton:hover,
.cache-ulqn51-StyledFilledButton:active {
  background: #d9dadd;
  color: #151a2d;
}

.cache-yx7dgl-StyledFilledButton-CloseButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 24px;
  padding: 0 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 4px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: #8c40ef;
  border: none;
  color: #ffffff;
  background: none;
  position: absolute;
  right: 24px;
}

.cache-yx7dgl-StyledFilledButton-CloseButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-yx7dgl-StyledFilledButton-CloseButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-yx7dgl-StyledFilledButton-CloseButton:hover,
.cache-yx7dgl-StyledFilledButton-CloseButton:active {
  background: #792dd4;
  color: #f9f9fa;
}

.cache-yx7dgl-StyledFilledButton-CloseButton:hover,
.cache-yx7dgl-StyledFilledButton-CloseButton:focus,
.cache-yx7dgl-StyledFilledButton-CloseButton:active {
  background: none;
}

.cache-1dnbbhk-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1dnbbhk-StyledIcon-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    class="cache-kjn9ce-Stack-Container ewvyccp0"
    data-variant="info"
  >
    <div
      class="cache-1osn1u7-Stack ehpbis70"
    >
      <p
        class="cache-fzpogg-StyledText e13y3mga0"
      >
        Sample GlobalAlert
      </p>
      <button
        class="cache-ulqn51-StyledFilledButton e112qvla2"
        type="button"
      >
        Button
      </button>
    </div>
    <button
      class="ewvyccp1 cache-yx7dgl-StyledFilledButton-CloseButton e112qvla2"
      type="button"
    >
      <svg
        class="cache-1dnbbhk-StyledIcon-sizeStyles e17h3kg70"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`GlobalAlert renders correctly with children as component 1`] = `
<DocumentFragment>
  .cache-kjn9ce-Stack-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
  height: 56px;
  padding: 0 16px;
}

.cache-kjn9ce-Stack-Container[data-variant='info'] {
  background-color: #0078d2;
}

.cache-kjn9ce-Stack-Container[data-variant='danger'] {
  background-color: #e51963;
}

.cache-kjn9ce-Stack-Container[data-variant='promotional'] {
  background: linear-gradient(151deg, #03cfda 0%, #3d1862 28.91%, #151a2d 75.01%);
}

.cache-1osn1u7-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-fzpogg-StyledText {
  color: #ffffff;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-yx7dgl-StyledFilledButton-CloseButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 24px;
  padding: 0 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 4px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: #8c40ef;
  border: none;
  color: #ffffff;
  background: none;
  position: absolute;
  right: 24px;
}

.cache-yx7dgl-StyledFilledButton-CloseButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-yx7dgl-StyledFilledButton-CloseButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-yx7dgl-StyledFilledButton-CloseButton:hover,
.cache-yx7dgl-StyledFilledButton-CloseButton:active {
  background: #792dd4;
  color: #f9f9fa;
}

.cache-yx7dgl-StyledFilledButton-CloseButton:hover,
.cache-yx7dgl-StyledFilledButton-CloseButton:focus,
.cache-yx7dgl-StyledFilledButton-CloseButton:active {
  background: none;
}

.cache-1dnbbhk-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1dnbbhk-StyledIcon-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    class="cache-kjn9ce-Stack-Container ewvyccp0"
    data-variant="info"
  >
    <div
      class="cache-1osn1u7-Stack ehpbis70"
    >
      <p
        class="cache-fzpogg-StyledText e13y3mga0"
      >
        Sample GlobalAlert
      </p>
    </div>
    <button
      class="ewvyccp1 cache-yx7dgl-StyledFilledButton-CloseButton e112qvla2"
      type="button"
    >
      <svg
        class="cache-1dnbbhk-StyledIcon-sizeStyles e17h3kg70"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`GlobalAlert renders correctly with closable and onClose 1`] = `
<DocumentFragment>
  .cache-kjn9ce-Stack-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
  height: 56px;
  padding: 0 16px;
}

.cache-kjn9ce-Stack-Container[data-variant='info'] {
  background-color: #0078d2;
}

.cache-kjn9ce-Stack-Container[data-variant='danger'] {
  background-color: #e51963;
}

.cache-kjn9ce-Stack-Container[data-variant='promotional'] {
  background: linear-gradient(151deg, #03cfda 0%, #3d1862 28.91%, #151a2d 75.01%);
}

.cache-1osn1u7-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-fzpogg-StyledText {
  color: #ffffff;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-yx7dgl-StyledFilledButton-CloseButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 24px;
  padding: 0 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 4px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: #8c40ef;
  border: none;
  color: #ffffff;
  background: none;
  position: absolute;
  right: 24px;
}

.cache-yx7dgl-StyledFilledButton-CloseButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-yx7dgl-StyledFilledButton-CloseButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-yx7dgl-StyledFilledButton-CloseButton:hover,
.cache-yx7dgl-StyledFilledButton-CloseButton:active {
  background: #792dd4;
  color: #f9f9fa;
}

.cache-yx7dgl-StyledFilledButton-CloseButton:hover,
.cache-yx7dgl-StyledFilledButton-CloseButton:focus,
.cache-yx7dgl-StyledFilledButton-CloseButton:active {
  background: none;
}

.cache-1dnbbhk-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1dnbbhk-StyledIcon-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    class="cache-kjn9ce-Stack-Container ewvyccp0"
    data-variant="info"
  >
    <div
      class="cache-1osn1u7-Stack ehpbis70"
    >
      <p
        class="cache-fzpogg-StyledText e13y3mga0"
      >
        Sample GlobalAlert
      </p>
    </div>
    <button
      class="ewvyccp1 cache-yx7dgl-StyledFilledButton-CloseButton e112qvla2"
      type="button"
    >
      <svg
        class="cache-1dnbbhk-StyledIcon-sizeStyles e17h3kg70"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`GlobalAlert renders correctly with default values 1`] = `
<DocumentFragment>
  .cache-kjn9ce-Stack-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
  height: 56px;
  padding: 0 16px;
}

.cache-kjn9ce-Stack-Container[data-variant='info'] {
  background-color: #0078d2;
}

.cache-kjn9ce-Stack-Container[data-variant='danger'] {
  background-color: #e51963;
}

.cache-kjn9ce-Stack-Container[data-variant='promotional'] {
  background: linear-gradient(151deg, #03cfda 0%, #3d1862 28.91%, #151a2d 75.01%);
}

.cache-1osn1u7-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-fzpogg-StyledText {
  color: #ffffff;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-yx7dgl-StyledFilledButton-CloseButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 24px;
  padding: 0 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 4px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: #8c40ef;
  border: none;
  color: #ffffff;
  background: none;
  position: absolute;
  right: 24px;
}

.cache-yx7dgl-StyledFilledButton-CloseButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-yx7dgl-StyledFilledButton-CloseButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-yx7dgl-StyledFilledButton-CloseButton:hover,
.cache-yx7dgl-StyledFilledButton-CloseButton:active {
  background: #792dd4;
  color: #f9f9fa;
}

.cache-yx7dgl-StyledFilledButton-CloseButton:hover,
.cache-yx7dgl-StyledFilledButton-CloseButton:focus,
.cache-yx7dgl-StyledFilledButton-CloseButton:active {
  background: none;
}

.cache-1dnbbhk-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1dnbbhk-StyledIcon-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    class="cache-kjn9ce-Stack-Container ewvyccp0"
    data-variant="info"
  >
    <div
      class="cache-1osn1u7-Stack ehpbis70"
    >
      <p
        class="cache-fzpogg-StyledText e13y3mga0"
      >
        Simple GlobalAlert
      </p>
    </div>
    <button
      class="ewvyccp1 cache-yx7dgl-StyledFilledButton-CloseButton e112qvla2"
      type="button"
    >
      <svg
        class="cache-1dnbbhk-StyledIcon-sizeStyles e17h3kg70"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`GlobalAlert renders correctly with link 1`] = `
<DocumentFragment>
  .cache-kjn9ce-Stack-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
  height: 56px;
  padding: 0 16px;
}

.cache-kjn9ce-Stack-Container[data-variant='info'] {
  background-color: #0078d2;
}

.cache-kjn9ce-Stack-Container[data-variant='danger'] {
  background-color: #e51963;
}

.cache-kjn9ce-Stack-Container[data-variant='promotional'] {
  background: linear-gradient(151deg, #03cfda 0%, #3d1862 28.91%, #151a2d 75.01%);
}

.cache-1osn1u7-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-fzpogg-StyledText {
  color: #ffffff;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-11vhm6c-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #ffffff;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-11vhm6c-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-11vhm6c-StyledLink>* {
  pointer-events: none;
}

.cache-11vhm6c-StyledLink:hover,
.cache-11vhm6c-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #f9f9fa;
  text-decoration-color: #f9f9fa;
}

.cache-11vhm6c-StyledLink:hover .e1afnb7a2,
.cache-11vhm6c-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-11vhm6c-StyledLink[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.cache-11vhm6c-StyledLink:hover::after,
.cache-11vhm6c-StyledLink:focus::after {
  background-color: #3f4250;
}

.cache-11vhm6c-StyledLink:active {
  text-decoration-thickness: 2px;
}

.cache-yx7dgl-StyledFilledButton-CloseButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 24px;
  padding: 0 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 4px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: #8c40ef;
  border: none;
  color: #ffffff;
  background: none;
  position: absolute;
  right: 24px;
}

.cache-yx7dgl-StyledFilledButton-CloseButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-yx7dgl-StyledFilledButton-CloseButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-yx7dgl-StyledFilledButton-CloseButton:hover,
.cache-yx7dgl-StyledFilledButton-CloseButton:active {
  background: #792dd4;
  color: #f9f9fa;
}

.cache-yx7dgl-StyledFilledButton-CloseButton:hover,
.cache-yx7dgl-StyledFilledButton-CloseButton:focus,
.cache-yx7dgl-StyledFilledButton-CloseButton:active {
  background: none;
}

.cache-1dnbbhk-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1dnbbhk-StyledIcon-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    class="cache-kjn9ce-Stack-Container ewvyccp0"
    data-variant="info"
  >
    <div
      class="cache-1osn1u7-Stack ehpbis70"
    >
      <p
        class="cache-fzpogg-StyledText e13y3mga0"
      >
        This is a 
        <a
          class="cache-11vhm6c-StyledLink e1afnb7a0"
          data-variant="inline"
          href="scaleway.com"
          prominence="stronger"
        >
          Global Alert
        </a>
          link
      </p>
    </div>
    <button
      class="ewvyccp1 cache-yx7dgl-StyledFilledButton-CloseButton e112qvla2"
      type="button"
    >
      <svg
        class="cache-1dnbbhk-StyledIcon-sizeStyles e17h3kg70"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;
